5.4/967b109096b2c2b7ef45a3fce44908efe05779a9
media: uapi: new file needs types.h

Today's linux-next build (x86_64 allmodconfig) failed like this:

	include/media/vp8-ctrls.h:25:2: error: unknown type name '__s8'
	  __s8 quant_update[4];
	  ^~~~
	...
	include/media/vp8-ctrls.h:107:2: error: unknown type name '__u64'
	  __u64 flags;
	  ^~~~~

Caused by commit a57d6acaf352 ("media: uapi: Add VP8 stateless decoder API")

Fixes: a57d6acaf352 ("media: uapi: Add VP8 stateless decoder API")
Signed-off-by: Stephen Rothwell <sfr@canb.auug.org.au>
Signed-off-by: Mauro Carvalho Chehab <mchehab+samsung@kernel.org>

